@@ -32,7 +32,7 @@
 #options@{options(R.options, 'C', 'k', 'v')}#
 #view-toggle@{viewToggle(false, 'b')}#
 #view@{view('current/b', 'model')}#
-#routejs-@{routeScript('p.js')}#
+#routejs-@{public_js('p.js')}#
 #title@{title}#
 #mobile@{mobile}#
 #@{head}#
